--- a/src/main/resources/com/example/together/feed-view.fxml
+++ b/src/main/resources/com/example/together/feed-view.fxml
@@ -15,95 +15,88 @@
     <BorderPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
         <left>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="130.0">
-                <children>
-                    <Button fx:id="settingsButton" mnemonicParsing="false" styleClass="transparent-button">
-                        <graphic>
-                            <FontIcon fill="#fff6ed" iconLiteral="fa-cog" iconSize="40" />
-                        </graphic>
-                    </Button>
-                    <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
-                        <children>
-                            <Button fx:id="groupButton" mnemonicParsing="false" styleClass="transparent-button">
-                                <graphic>
-                                    <FontIcon fill="#fff6ed" iconLiteral="fa-users" iconSize="40" />
-                                </graphic>
-                            </Button>
-                            <Button fx:id="listButton" mnemonicParsing="false" styleClass="transparent-button">
-                                <graphic>
-                                    <FontIcon fill="#fff6ed" iconLiteral="fa-list" iconSize="40" />
-                                </graphic>
-                            </Button>
-                            <Button fx:id="homeButton" mnemonicParsing="false" styleClass="transparent-button">
-                                <graphic>
-                                    <FontIcon fill="#fff6ed" iconLiteral="fa-home" iconSize="40" />
-                                </graphic>
-                            </Button>
-                        </children>
-                        <padding>
-                            <Insets bottom="15.0" left="5.0" right="5.0" top="15.0" />
-                        </padding>
-                    </VBox>
-                </children>
                 <VBox.margin>
-                    <Insets top="15.0" />
+                    <Insets top="15.0"/>
                 </VBox.margin>
                 <padding>
-                    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                    <Insets bottom="15.0" left="15.0" right="15.0" top="15.0"/>
                 </padding>
+                <Button fx:id="settingsButton" mnemonicParsing="false" styleClass="transparent-button">
+                    <graphic>
+                        <FontIcon fill="#fff6ed" iconLiteral="fa-cog" iconSize="40"/>
+                    </graphic>
+                </Button>
+                <VBox alignment="BOTTOM_CENTER" VBox.vgrow="ALWAYS">
+                    <padding>
+                        <Insets bottom="15.0" left="5.0" right="5.0" top="15.0"/>
+                    </padding>
+                    <Button fx:id="groupButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                            <FontIcon fill="#fff6ed" iconLiteral="fa-users" iconSize="40"/>
+                        </graphic>
+                    </Button>
+                    <Button fx:id="listButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                            <FontIcon fill="#fff6ed" iconLiteral="fa-list" iconSize="40"/>
+                        </graphic>
+                    </Button>
+                    <Button fx:id="homeButton" mnemonicParsing="false" styleClass="transparent-button">
+                        <graphic>
+                            <FontIcon fill="#fff6ed" iconLiteral="fa-home" iconSize="40"/>
+                        </graphic>
+                    </Button>
+                </VBox>
             </VBox>
 
         </left>
         <right>
-            <VBox fx:id="rightBox" prefHeight="200.0" prefWidth="424.0" BorderPane.alignment="CENTER">
-                <children>
-                    <HBox prefHeight="100.0" prefWidth="200.0">
-                        <children>
-                            <ImageView fitHeight="117.0" fitWidth="117.0" pickOnBounds="true" preserveRatio="true" />
-                            <VBox alignment="TOP_RIGHT" prefHeight="200.0" HBox.hgrow="ALWAYS">
-                                <children>
-                                    <Label fx:id="usernameLabel" styleClass="roboto-medium" text="USERNAME">
-                                        <font>
-                                            <Font size="24.0" />
-                                        </font></Label>
-                                    <Button mnemonicParsing="false" fx:id="openProfile" text="Profile">
-                                        <font>
-                                            <Font name="JetBrains Mono SemiBold" size="18.0" />
-                                        </font>
-                                        <styleClass>
-                                            <String fx:value="darkButton" />
-                                            <String fx:value="roboto-medium" />
-                                        </styleClass></Button>
-                                </children>
-                                <padding>
-                                    <Insets left="20.0" />
-                                </padding>
-                            </VBox>
-                        </children>
-                    </HBox>
-                    <Label styleClass="roboto-medium" text="My Groups">
-                        <font>
-                            <Font name="JetBrains Mono Medium" size="18.0" />
-                        </font></Label>
-                    <ListView fx:id="groupsListview" prefHeight="200.0" prefWidth="200.0" />
-                    <Label styleClass="roboto-medium" text="My friends">
-                        <font>
-                            <Font name="JetBrains Mono Medium" size="18.0" />
-                        </font></Label>
-                    <ListView fx:id="friendsListview" prefHeight="200.0" prefWidth="200.0" />
-                </children>
+            <VBox prefHeight="200.0" prefWidth="424.0" BorderPane.alignment="CENTER">
                 <padding>
-                    <Insets bottom="40.0" left="40.0" right="40.0" top="40.0" />
+                    <Insets bottom="40.0" left="40.0" right="40.0" top="40.0"/>
                 </padding>
+                <HBox prefHeight="100.0" prefWidth="200.0">
+                    <ImageView fitHeight="117.0" fitWidth="117.0" pickOnBounds="true" preserveRatio="true"/>
+                    <VBox alignment="TOP_RIGHT" prefHeight="200.0" HBox.hgrow="ALWAYS">
+                        <padding>
+                            <Insets left="20.0"/>
+                        </padding>
+                        <Label fx:id="usernameLabel" styleClass="roboto-medium" text="USERNAME">
+                            <font>
+                                <Font size="24.0"/>
+                            </font>
+                        </Label>
+                        <Button mnemonicParsing="false" fx:id="openProfile" text="Profile">
+                            <font>
+                                <Font name="JetBrains Mono SemiBold" size="18.0"/>
+                            </font>
+                            <styleClass>
+                                <String fx:value="darkButton"/>
+                                <String fx:value="roboto-medium"/>
+                            </styleClass>
+                        </Button>
+                    </VBox>
+                </HBox>
+                <Label styleClass="roboto-medium" text="My Groups">
+                    <font>
+                        <Font name="JetBrains Mono Medium" size="18.0"/>
+                    </font>
+                </Label>
+                <ListView fx:id="groupsListview" prefHeight="200.0" prefWidth="200.0"/>
+                <Label styleClass="roboto-medium" text="My friends">
+                    <font>
+                        <Font name="JetBrains Mono Medium" size="18.0"/>
+                    </font>
+                </Label>
+                <ListView fx:id="friendsListview" prefHeight="200.0" prefWidth="200.0"/>
             </VBox>
         </right>
       <center>
-         <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-           <content>
-             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-           </content>
-            <BorderPane.margin>
-               <Insets bottom="20.0" left="40.0" right="20.0" top="20.0" />
-            </BorderPane.margin>
-         </ScrollPane>
+          <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0"
+                      BorderPane.alignment="CENTER">
+              <BorderPane.margin>
+                  <Insets bottom="20.0" left="40.0" right="20.0" top="20.0"/>
+              </BorderPane.margin>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0"/>
+          </ScrollPane>
       </center></BorderPane>
 </StackPane>
