--- a/src/main/resources/com/example/together/login-view.fxml
+++ b/src/main/resources/com/example/together/login-view.fxml
@@ -19,58 +19,59 @@
    </top>
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" spacing="25.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label alignment="CENTER" styleClass="roboto-medium" text="Username" textAlignment="CENTER" textFill="#fff6ed">
-               <font>
-                  <Font name="JetBrains Mono Medium" size="14.0" />
-               </font></Label>
-            <TextField fx:id="usernameField" />
-            <Label styleClass="roboto-medium" text="Password" textFill="#fff6ed">
-               <font>
-                  <Font name="JetBrains Mono Medium" size="14.0" />
-               </font></Label>
-            <PasswordField fx:id="passwordField">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </PasswordField>
-            <Label fx:id="infoLabel" textFill="#fff6ed">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-         </children>
          <BorderPane.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
          </BorderPane.margin>
+         <Label alignment="CENTER" styleClass="roboto-medium" text="Username" textAlignment="CENTER" textFill="#fff6ed">
+            <font>
+               <Font name="JetBrains Mono Medium" size="14.0"/>
+            </font>
+         </Label>
+         <TextField fx:id="usernameField"/>
+         <Label styleClass="roboto-medium" text="Password" textFill="#fff6ed">
+            <font>
+               <Font name="JetBrains Mono Medium" size="14.0"/>
+            </font>
+         </Label>
+         <PasswordField fx:id="passwordField">
+            <VBox.margin>
+               <Insets/>
+            </VBox.margin>
+         </PasswordField>
+         <Label fx:id="infoLabel" textFill="#fff6ed">
+            <font>
+               <Font size="14.0"/>
+            </font>
+         </Label>
       </VBox>
    </center>
    <bottom>
-      <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="BOTTOM_CENTER">
-         <children>
-            <Button mnemonicParsing="false" onAction="#login" text="Login">
-               <styleClass>
-                  <String fx:value="darkButton" />
-                  <String fx:value="roboto-medium" />
-               </styleClass>
-               <font>
-                  <Font size="18.0" />
-               </font></Button>
-            <Button mnemonicParsing="false" onAction="#signup" stylesheets="@main.css" text="Sign Up">
-               <styleClass>
-                  <String fx:value="darkButton" />
-                  <String fx:value="roboto-medium" />
-               </styleClass>
-               <font>
-                  <Font size="18.0" />
-               </font></Button>
-         </children>
+      <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0"
+            BorderPane.alignment="BOTTOM_CENTER">
          <BorderPane.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
          </BorderPane.margin>
          <padding>
-            <Insets top="20.0" />
+            <Insets top="20.0"/>
          </padding>
+         <Button mnemonicParsing="false" onAction="#login" text="Login">
+            <styleClass>
+               <String fx:value="darkButton"/>
+               <String fx:value="roboto-medium"/>
+            </styleClass>
+            <font>
+               <Font size="18.0"/>
+            </font>
+         </Button>
+         <Button mnemonicParsing="false" onAction="#signup" stylesheets="@main.css" text="Sign Up">
+            <styleClass>
+               <String fx:value="darkButton"/>
+               <String fx:value="roboto-medium"/>
+            </styleClass>
+            <font>
+               <Font size="18.0"/>
+            </font>
+         </Button>
       </HBox>
    </bottom>
 </BorderPane>
